--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,11 +1,13 @@
 doctype html
-html
+html lang = 'ja'
   head
-    title
-      | AsobiApp
+    title = full_title(yield(:title))
+    meta charset = 'UTF-8'
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
+    = stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    = yield
+    = render partial: 'layouts/header'
+    .container
+      = yield
