--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,6 +1,6 @@
-header.navbar
-  = link_to('Asobi', root_path, class: 'navbar-brand')
-  ul.nav.navbar-nav.navbar-left
+header.header
+  = link_to('Asobi', root_path)
+  ul
     li
       = link_to('検索', '#')
     li
