--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,9 +5,10 @@ html lang = 'ja'
     meta charset = 'UTF-8'
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_pack_tag 'application', media: 'all'
     = javascript_pack_tag 'application'
+    = stylesheet_pack_tag 'application', media: 'all'
   body
     = render partial: 'layouts/header'
-    .container
+    .wrapper
       = yield
+    = render partial: 'layouts/footer'
