--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -1,3 +1,4 @@
-h1 Hello, World!
-button.btn.btn-secondary type='button' title="こんにちは" data-toggle="tooltip" data-placement="top"
-  | Tooltip on top
+main.main
+  h1 Hello, World!
+  button.btn.btn-secondary type='button' title="こんにちは" data-toggle="tooltip" data-placement="top"
+    | Tooltip on top
