--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -2,3 +2,5 @@ main.main
   h1 Hello, World!
   button.btn.btn-secondary type='button' title="こんにちは" data-toggle="tooltip" data-placement="top"
     | Tooltip on top
+aside.sidemenu
+  p サイドメニュー
