Create Controller And Model

--- a/app/frontend/stylesheets/_custom.scss
+++ b/app/frontend/stylesheets/_custom.scss
@@ -1,6 +1,10 @@
-$background_color: #fdffc9;
-$header_color: #ffca99;
-$footer_color: #CBD980;
+// $background_color: #fdffc9;
+// $header_color: #ffca99;
+// $footer_color: #CBD980;
+$background_color: white;
+$header_color: lightgray;
+$footer_color: lightgray;
+
 
 html {
   font-size: 62.5%;
