Create User Validation

--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -6,6 +6,6 @@ header.header
     li
       = link_to('ユーザー検索', '#')
     li
-      = link_to('新規登録', '#', class: 'btn btn-outline-light')
+      = link_to('新規登録', signup_path, class: 'btn btn-outline-light')
     li
       = link_to('ログイン', '#')
