--- a/app/frontend/stylesheets/_custom.scss
+++ b/app/frontend/stylesheets/_custom.scss
@@ -5,7 +5,6 @@ $background_color: white;
 $header_color: lightgray;
 $footer_color: lightgray;
 
-
 html {
   font-size: 62.5%;
 }
@@ -44,11 +43,13 @@ body {
     display: block;
     float: left;
     width: 700px;
+    border: 1px black solid;
   }
 
   .sidemenu {
     float: right;
     width: 270px;
+    border: 1px black solid;
   }
 }
 
