Create Login Function

--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -5,7 +5,13 @@ header.header
       = link_to('検索', '#')
     li
       = link_to('ユーザー検索', '#')
-    li
-      = link_to('新規登録', signup_path, class: 'btn btn-outline-light')
-    li
-      = link_to('ログイン', '#')
+    - if logged_in?
+      li
+        = link_to(current_user.name, user_path(current_user.name))
+      li
+        = link_to('ログアウト', logout_path, method: :delete)
+    -else
+      li
+        = link_to('新規登録', signup_path, class: 'btn btn-outline-light')
+      li
+        = link_to('ログイン', login_path)
