--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -5,19 +5,4 @@ p 新規登録してみんなと遊びをシェアしよう！
 = render partial: 'shared/flash'
 = render partial: 'shared/error_messages', locals: { model: @user }
 = form_with model: @user, local: true do |f|
-  .input-form
-    = f.label :name
-    = f.text_field :name
-
-  .input-form
-    = f.label :email
-    = f.email_field :email
-
-  .input-form
-    = f.label :password
-    = f.password_field :password
-
-  .input-form
-    = f.label :password_confirmation
-    = f.password_field :password_confirmation
-  = f.submit '登録する'
+  = render partial: 'shared/session/form', locals: { model: @user, signup_flag: true, f: f }
