--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,2 +1,8 @@
-h1 Users#show
-p Find me in app/views/users/show.html.slim
+= content_for(:title, @user.name)
+
+main.main
+  h1 こんにちは、#{@user.name}さん!
+aside.sidemenu
+  h1 = "@#{@user.name}"
+  - unless @user.introduction.blank?
+    p = @user.introduction
