--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -1,2 +1,8 @@
-h1 Users#index
-p Find me in app/views/users/index.html.slim
+= content_for(:title, 'ユーザー一覧')
+
+main.main
+  ul.user-list
+    - @users.each do |user|
+      li = link_to user.name, user_path(user.name)
+aside.sidemenu
+  h1 index
