--- a/app/frontend/stylesheets/_custom.scss
+++ b/app/frontend/stylesheets/_custom.scss
@@ -16,11 +16,12 @@ body {
 }
 
 .header {
+  margin: 0px auto 20px;
+  padding: 5px auto;
   width: 100%;
   background: $header_color;
 
   a {
-
     &:link,
     &:visited,
     &:hover,
@@ -66,16 +67,17 @@ body {
 }
 
 .clearfix::after {
-  content: '';
+  content: "";
   display: block;
   clear: both;
 }
 
 .footer {
+  margin: 10px auto 0px;
+  padding: 5px auto;
   width: 100%;
   background: $footer_color;
 }
-
 
 pre.debug_dump {
   margin: 10px 0px;
