--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -3,6 +3,7 @@
 main.main
   ul.user-list
     - @users.each do |user|
-      li = link_to user.name, user_path(user.name)
+      = render partial: 'shared/media/user', locals: { user: user }
+  = paginate @users
 aside.sidemenu
   h1 index
