Restyling home and login

--- a/app/frontend/stylesheets/_custom.scss
+++ b/app/frontend/stylesheets/_custom.scss
@@ -1,95 +1,95 @@
-// $background_color: #fdffc9;
-// $header_color: #ffca99;
-// $footer_color: #CBD980;
-$background_color: white;
-$header_color: lightgray;
-$footer_color: lightgray;
+// // $background_color: #fdffc9;
+// // $header_color: #ffca99;
+// // $footer_color: #CBD980;
+// $background_color: white;
+// $header_color: lightgray;
+// $footer_color: lightgray;
 
-html {
-  font-size: 62.5%;
-}
+// html {
+//   font-size: 62.5%;
+// }
 
-body {
-  background: $background_color;
-  font-size: 1.6rem;
-  text-align: center;
-}
+// body {
+//   background: $background_color;
+//   font-size: 1.6rem;
+//   text-align: center;
+// }
 
-.header {
-  margin: 0px auto 20px;
-  padding: 5px auto;
-  width: 100%;
-  background: $header_color;
+// .header {
+//   margin: 0px auto 20px;
+//   padding: 5px auto;
+//   width: 100%;
+//   background: $header_color;
 
-  a {
+//   a {
 
-    &:link,
-    &:visited,
-    &:hover,
-    &:active {
-      color: whitesmoke;
-      text-decoration: none;
-    }
-  }
+//     &:link,
+//     &:visited,
+//     &:hover,
+//     &:active {
+//       color: whitesmoke;
+//       text-decoration: none;
+//     }
+//   }
 
-  ul {
-    list-style: none;
-    text-align: right;
+//   ul {
+//     list-style: none;
+//     text-align: right;
 
-    li {
-      display: inline-block;
-      margin: 10px;
-      padding: 10px;
-      text-align: center;
-      background: skyblue;
-      color: white;
-      font-weight: bold;
-      border-radius: 3px;
-    }
-  }
-}
+//     li {
+//       display: inline-block;
+//       margin: 10px;
+//       padding: 10px;
+//       text-align: center;
+//       background: skyblue;
+//       color: white;
+//       font-weight: bold;
+//       border-radius: 3px;
+//     }
+//   }
+// }
 
-.wrapper {
-  margin: 30px auto 40px;
-  width: 1000px;
+// .wrapper {
+//   margin: 30px auto 40px;
+//   width: 1000px;
 
-  .main {
-    display: block;
-    float: left;
-    width: 700px;
-    border: 1px black solid;
-  }
+//   .main {
+//     display: block;
+//     float: left;
+//     width: 700px;
+//     border: 1px black solid;
+//   }
 
-  .sidemenu {
-    float: right;
-    width: 270px;
-    border: 1px black solid;
-  }
-}
+//   .sidemenu {
+//     float: right;
+//     width: 270px;
+//     border: 1px black solid;
+//   }
+// }
 
-.clearfix::after {
-  content: "";
-  display: block;
-  clear: both;
-}
+// .clearfix::after {
+//   content: "";
+//   display: block;
+//   clear: both;
+// }
 
-nav.pagination {
-  margin: 10px 0px;
-  display: inline-block;
+// nav.pagination {
+//   margin: 10px 0px;
+//   display: inline-block;
 
-  span {
-    padding: 5px;
-    border: 0.5px gray solid;
-    color: darkblue;
-  }
-}
+//   span {
+//     padding: 5px;
+//     border: 0.5px gray solid;
+//     color: darkblue;
+//   }
+// }
 
-.footer {
-  margin: 10px auto 0px;
-  padding: 5px auto;
-  width: 100%;
-  background: $footer_color;
-}
+// .footer {
+//   margin: 10px auto 0px;
+//   padding: 5px auto;
+//   width: 100%;
+//   background: $footer_color;
+// }
 
 pre.debug_dump {
   margin: 10px 0px;
