--- a/app/views/shared/session/_form.html.slim
+++ b/app/views/shared/session/_form.html.slim
@@ -1,22 +1,25 @@
 - if local_assigns[:signup_flag].present?
-  .input-form
-    = f.label :name
-    = f.text_field :name
+  .form-group
+    = f.label :name, class: 'form-label'
+    = f.text_field :name, class: 'form-control'
 
-.input-form
-  = f.label :email
-  = f.email_field :email
+.form-group
+  = f.label :email, class: 'form-label'
+  = f.email_field :email, class: 'form-control'
 
-.input-form
-  = f.label :password
-  = f.password_field :password
-
-- if local_assigns[:signup_flag].present?
-  .input-form
-    = f.label :password_confirmation
-    = f.password_field :password_confirmation
+.form-group
+  = f.label :password, class: 'form-label'
+  = f.password_field :password, class: 'form-control'
 
 - if local_assigns[:signup_flag].present?
-  = f.submit '登録する'
-- else
-  = f.submit 'ログイン'
+  .form-group
+    = f.label :password_confirmation, class: 'form-label'
+    = f.password_field :password_confirmation, class: 'form-control'
+
+hr
+
+.form-group
+  - if local_assigns[:signup_flag].present?
+    = f.submit '登録する', class: 'btn btn-primary btn-block'
+  - else
+    = f.submit 'ログイン', class: 'btn btn-primary'
