Finish restyling bootstrap

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,7 +11,12 @@ html lang = 'ja'
     = render partial: 'shared/header'
     .container
       = render partial: 'shared/flash'
-      = yield
+      = yield(:jumbotron)
+      .row
+        main.col-md-9
+          = yield
+        aside.col-md-3
+          = yield(:sidemenu)
     = render partial: 'shared/footer'
     - if Rails.env.development?
       = debug(params)
