--- a/app/views/shared/media/_user.slim
+++ b/app/views/shared/media/_user.slim
@@ -1,4 +1,4 @@
-li.user_media id="user_#{user.name}"
+li.list-group-item id="user_#{user.name}"
   = user_photo(user)
   = link_to user.name, user_path(user.name)
   - if user.introduction.present?
