--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,8 +1,8 @@
 = content_for(:title, @user.name)
 
-main.main
-  h1 こんにちは、#{@user.name}さん!
-aside.sidemenu
+h1 こんにちは、#{@user.name}さん!
+
+= content_for(:sidemenu) do
   = image_tag @user.photo.url if @user.photo?
   h1 = "@#{@user.name}"
   - unless @user.introduction.blank?
