--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -1,6 +1,7 @@
 = content_for(:jumbotron) do
   .jumbotron.my-4
     h1 Asobiへようこそ！！！
+    = link_to 'Asobi', '#'
     p 地元に伝わる遊び、いろんなゲームのローカルルール、自分で考えた「遊び」をみんなで共有しよう！
 
 .row
