--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -10,5 +10,7 @@ footer.nav.navbar-expand-lg.navbar-dark.bg-success
       li.nav-item
         = link_to 'ヘルプ', help_path, class: 'nav-link'
       li.nav-item
-        = link_to 'ユーザー一覧', users_path, class: 'nav-link'
+        = link_to 'ユーザー', users_path, class: 'nav-link'
+      li.nav-item
+        = link_to '記事', articles_path, class: 'nav-link'
     .text-center.text-light.py-2 Copyright © sasakura_870 2019
