Mod pages within article_card

--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -5,9 +5,11 @@
     p 地元に伝わる遊び、いろんなゲームのローカルルール、自分で考えた「遊び」をみんなで共有しよう！
 
 .row
-  - 10.times do
-    .col-md-4.col-sm-6.mb-4
-      = render partial: 'shared/media/article_card'
+  - if @articles.any?
+    - @articles.each do |article|
+      .col-md-4.col-sm-6.mb-4
+        = render partial: 'shared/media/article_card', locals: { article: article }
+= paginate @articles
 
 = content_for(:sidemenu) do
   .boarder-dark サイドメニュー
