--- a/app/views/shared/media/_article_card.slim
+++ b/app/views/shared/media/_article_card.slim
@@ -1,11 +1,12 @@
 .card-deck
   .card
     .card-body
-      h4.card-title Title
-      p.card-subtitle.text-muted ここに概要が入ります
+      h4.card-title = article.title
+      - unless article.overview.nil?
+        p.card-subtitle.text-muted = article.overview
     = image_pack_tag 'article_default.png', class: 'card-image-top mx-auto w-100'
     .card-body
       p.card-link タグも入ります
       p.card-text.text-muted いいね数が入ります
     .card-footer
-      = link_to 'ここに作成者が入ります', '#', class: 'card-link'
+      = link_to article.user.name, user_path(article.user.name), class: 'card-link'
