--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,13 +1,18 @@
 header.navbar.navbar-expand-lg.navbar-dark.bg-success
   .container
     = link_to('Asobi', root_path, class: 'navbar-brand')
-    ul.navbar-nav.mr-auto
+    = form_with local: true, class: 'form-inline' do |f|
+      = f.text_field :q, placeholder: 'キーワードを入力', class: 'form-control mr-2'
+      = f.submit '検索', class: 'btn btn-secondary'
+    / ul.navbar-nav.mr-auto
       li.nav-item
         = link_to('検索', '#', class: 'nav-link')
       li.nav-item
         = link_to('ユーザー検索', '#', class: 'nav-link')
     ul.navbar-nav.ml-auto
       - if logged_in?
+        li.nav-item
+          = link_to('投稿する', new_article_path, class: 'nav-link btn btn-primary mr-4')
         li.nav-item.dropdown
           a.nav-link.btn.btn-outline-light.dropdown-toggle#dropdown_profile data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href='#'
             = current_user.name
