--- a/app/views/shared/session/_form.html.slim
+++ b/app/views/shared/session/_form.html.slim
@@ -16,6 +16,11 @@
     = f.label :password_confirmation, class: 'form-label'
     = f.password_field :password_confirmation, class: 'form-control'
 
+- else
+  .form-group.form-check
+    = f.check_box :remember_check, class: 'form-check-input'
+    = f.label :remember_check, 'ログイン状態を保持する', class: 'form-check-label'
+
 hr
 
 .form-group
