--- a/app/views/shared/media/_article_card.slim
+++ b/app/views/shared/media/_article_card.slim
@@ -1,4 +1,4 @@
-.card-deck
+.card-deck id=article.id_digest
   .card.shadow-sm
     .card-body
       h4.card-title = link_to(article.title, article_path(article))
