--- a/app/views/articles/index.html.slim
+++ b/app/views/articles/index.html.slim
@@ -1,2 +1,9 @@
 = content_for(:title, '記事一覧')
 
+h1 新着記事
+.row
+  - if @articles.any?
+    - @articles.each do |article|
+      .col-md-4.col-sm-6.mb-4
+        = render partial: 'shared/media/article_card', locals: { article: article }
+= paginate @articles
