--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,15 +1,8 @@
 header.navbar.navbar-expand-lg.navbar-dark.bg-success
   .container
     = link_to('Asobi', root_path, class: 'navbar-brand')
-    / = form_with scope: :search, url: search_path, method: :get, local: true, class: 'form-inline' do |f|
-    = search_form_for @q, search_path, class: 'form-inline' do |f|
-      = f.search_field :q, placeholder: 'キーワードを入力', class: 'form-control mr-2'
-      = f.submit '検索', class: 'btn btn-secondary'
-    / ul.navbar-nav.mr-auto
-      li.nav-item
-        = link_to('検索', '#', class: 'nav-link')
-      li.nav-item
-        = link_to('ユーザー検索', '#', class: 'nav-link')
+    = form_with url: search_path, method: :get, local: true, class: 'form-inline' do |f|
+      = f.search_field :q, placeholder: 'キーワードを入力', id: 'search-text', class: 'form-control mr-2'
     ul.navbar-nav.ml-auto
       - if logged_in?
         li.nav-item
