--- a/app/views/articles/edit.html.slim
+++ b/app/views/articles/edit.html.slim
@@ -1,2 +1,3 @@
-h1 Articles#edit
-p Find me in app/views/articles/edit.html.slim
+= content_for(:title, "「#{@article.title}」の編集")
+
+= render partial: 'shared/article/form', locals: { article: @article }
