--- a/app/views/articles/new.html.slim
+++ b/app/views/articles/new.html.slim
@@ -2,19 +2,4 @@
 
 h1 新規投稿
 
-= form_with model: @article, local: true do |f|
-  .form-group
-    = f.label :title, class: 'form-label'
-    = f.text_field :title, class: 'form-control'
-  .form-group
-    = f.label :overview, class: 'form-label'
-    = f.text_field :overview, class: 'form-control'
-  .form-group
-    = f.file_field :thumbnail, class: 'form-control'
-  .form-group
-    = f.rich_text_area :content
-  .form-group.form-check
-    = f.check_box :posted, class: 'form-check-input'
-    = f.label :posted, '下書きに保存する', class: 'form-check-label'
-  .form-group.btn-group
-    = f.submit '投稿する', class: 'btn btn-primary'
+= render partial: 'shared/article/form', locals: { article: @article }
