--- a/app/frontend/stylesheets/application.scss
+++ b/app/frontend/stylesheets/application.scss
@@ -1,4 +1,4 @@
 // @import "~bootstrap/scss/bootstrap";
 @import '~bootstrap/dist/css/bootstrap';
+@import "./actiontext";
 @import "./_custom";
-@import "./actiontext"
