--- a/app/views/layouts/left_sidemenu.html.slim
+++ b/app/views/layouts/left_sidemenu.html.slim
@@ -3,7 +3,7 @@ html lang = 'ja'
   = render partial: 'shared/head'
   body
     = render partial: 'shared/header'
-    .container.py-4
+    .container.container-width-custom.py-4
       = render partial: 'shared/flash'
       .row
         aside.col-md-3
