--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,5 +1,5 @@
-footer.nav.navbar-expand-lg.navbar-dark.bg-success
-  .container
+footer.nav.navbar-expand-lg.navbar-dark.bgcolor-footer
+  .container.container-width-custom
     ul.navbar-nav
       li.nav-item
         = link_to 'Asobiとは', about_path, class: 'nav-link'
