--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,11 +1,11 @@
 doctype html
 html lang = 'ja'
   = render partial: 'shared/head'
-  body
+  body.bgcolor-bg
     = render partial: 'shared/header'
-    .container.py-4
+    = yield(:jumbotron)
+    .container.container-width-custom.py-4
       = render partial: 'shared/flash'
-      = yield(:jumbotron)
       .row
         main.col-md-9
           = yield
