--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -1,8 +1,8 @@
-= content_for(:jumbotron) do
-  .jumbotron
-    h1 Asobiへようこそ！！！
-    = link_to 'Asobi', '#'
-    p 地元に伝わる遊び、いろんなゲームのローカルルール、自分で考えた「遊び」をみんなで共有しよう！
+- unless logged_in?
+  = content_for(:jumbotron) do
+    .jumbotron.bgcolor-header.text-white
+      h1 遊び足りない！！！
+      p 地元に伝わる遊び、いろんなゲームのローカルルール、自分で考えた「遊び」をみんなで共有しよう！
 
 .row
   - if @articles.any?
