--- a/app/frontend/stylesheets/application.scss
+++ b/app/frontend/stylesheets/application.scss
@@ -1,4 +1,5 @@
 // @import "~bootstrap/scss/bootstrap";
 @import '~bootstrap/dist/css/bootstrap';
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import "./actiontext";
 @import "./_custom";
