--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -1,8 +1,11 @@
 - unless logged_in?
   = content_for(:jumbotron) do
-    .jumbotron.bgcolor-header.text-white
-      h1 遊び足りない！！！
-      p 地元に伝わる遊び、いろんなゲームのローカルルール、自分で考えた「遊び」をみんなで共有しよう！
+    .jumbotron.jumbotron-fluid.bgcolor-header.text-white
+      .container
+        .row
+          .col-md-5
+            h1 遊び足りない！！！
+            p 地元に伝わる遊び、いろんなゲームのローカルルール、自分で考えた「遊び」をみんなで共有しよう！
 
 .row
   - if @articles.any?
