update CSSのフレームワークをBootstrapからBootstrap Material Designに変更
Bootstrapは今後使わない方針

--- a/app/frontend/stylesheets/application.scss
+++ b/app/frontend/stylesheets/application.scss
@@ -1,5 +1,5 @@
-// @import "~bootstrap/scss/bootstrap";
-@import '~bootstrap/dist/css/bootstrap';
+// @import '~bootstrap/scss/bootstrap';
+@import '~bootstrap-material-design/scss/bootstrap-material-design';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import "./actiontext";
 @import "./_custom";
