--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -6,6 +6,9 @@
           .col-md-5
             h1 遊び足りない！！！
             p 地元に伝わる遊び、いろんなゲームのローカルルール、自分で考えた「遊び」をみんなで共有しよう！
+          .col-md-7
+            h4 ここにスライドショーが入ります。
+            button.btn.btn-raised.btn-info テスト
 
 .row
   - if @articles.any?
