--- a/app/views/shared/_head.html.slim
+++ b/app/views/shared/_head.html.slim
@@ -4,4 +4,4 @@
     = csrf_meta_tags
     = csp_meta_tag
     = javascript_pack_tag 'application'
-    = stylesheet_pack_tag 'application', media: 'all'
+    = stylesheet_pack_tag 'application', component: 'all'
