--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -8,14 +8,11 @@
             p 地元に伝わる遊び、いろんなゲームのローカルルール、自分で考えた「遊び」をみんなで共有しよう！
           .col-md-7
             h4 ここにスライドショーが入ります。
-            button.btn.btn-raised.btn-info テスト
+            button.btn.peach-gradient テスト
 
-.row
-  - if @articles.any?
-    - @articles.each do |article|
-      .col-md-4.col-sm-6.mb-4
-        = render partial: 'shared/media/article_card', locals: { article: article }
-= paginate @articles
+= render partial: 'shared/component/3column_articles', locals: { articles: @daily_articles, content_title: 'デイリーランキング', ranking: true }
+= render partial: 'shared/component/3column_articles', locals: { articles: @weekly_articles, content_title: 'ウィークリーランキング', ranking: true }
 
 = content_for(:sidemenu) do
-  .boarder-dark サイドメニュー
+  = render partial: 'shared/component/capsule_toys'
+  = render partial: 'shared/component/mini_article_list', locals: { articles: @recommended_articles, content_title: 'オススメの遊び' }
