--- a/app/frontend/stylesheets/application.scss
+++ b/app/frontend/stylesheets/application.scss
@@ -2,4 +2,8 @@
 @import '~bootstrap-material-design/scss/bootstrap-material-design';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import "./actiontext";
-@import "./_custom";
+
+@import "./valiables";
+@import "./utilities";
+@import "./custom";
+@import "./custom_button";
